[gd_scene load_steps=6 format=3 uid="uid://c2l8d0p68waf5"]

[ext_resource type="PackedScene" uid="uid://bqp0rlaj5w25g" path="res://2d/source/scenes/builder/menu.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://ctknb0lymanwg" path="res://2d/source/scenes/builder/status_bar.tscn" id="2"]
[ext_resource type="Theme" uid="uid://c6r0evvw6xarl" path="res://2d/assets/themes/transparent_borders.tres" id="3"]
[ext_resource type="Theme" uid="uid://fr1lin3sbs06" path="res://2d/assets/themes/transparent-static.tres" id="4"]
[ext_resource type="Script" path="res://2d/source/scripts/builder/dictionaries/artifacts.gd" id="5"]

[node name="Node2D" type="Node2D" groups=["builder"]]
script = ExtResource("5")

[node name="HeaderMenu" parent="." instance=ExtResource("1")]

[node name="Container" type="ScrollContainer" parent="."]
offset_top = 80.0
offset_right = 1024.0
offset_bottom = 576.0
mouse_filter = 2
theme = ExtResource("3")

[node name="Grid" type="GridContainer" parent="Container"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_constants/h_separation = 13
theme_override_constants/v_separation = 7
columns = 2

[node name="LabelTitle" type="Label" parent="Container/Grid"]
custom_minimum_size = Vector2(222, 0)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0.34902, 1, 1)

[node name="LabelBody" type="Label" parent="Container/Grid"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0.329412, 1, 1)
text = "Remember to build the mobs dictionary, at builder home, after editing the mobs1 or mobs2 dictionaries so that mobs can be seen while playing the game."

[node name="ArtifactNumberLabel" type="Label" parent="Container/Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "Artifact Number."
horizontal_alignment = 2

[node name="GridContainer" type="GridContainer" parent="Container/Grid"]
layout_mode = 2
columns = 3

[node name="ArtifactNumberSpinBox" type="SpinBox" parent="Container/Grid/GridContainer"]
layout_mode = 2
min_value = 1.0
max_value = 99.0
page = 1.0
value = 1.0

[node name="ArtifactImage" type="TextureRect" parent="Container/Grid/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 6

[node name="ArtifactNumberDescription" type="Label" parent="Container/Grid/GridContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.329412, 1, 0.329412, 1)

[node name="CharismaLabel" type="Label" parent="Container/Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "Charisma."
horizontal_alignment = 2

[node name="Grid1" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2

[node name="CharismaSpinBox" type="SpinBox" parent="Container/Grid/Grid1"]
layout_mode = 2
size_flags_horizontal = 12
size_flags_vertical = 4
max_value = 99.0
page = 1.0

[node name="LabelDescription" type="Label" parent="Container/Grid/Grid1"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2
mouse_filter = 1
text = "This is the bonus value of charisma. 1-99 value added to charisma when this artifact is active."

[node name="ConstitutionLabel" type="Label" parent="Container/Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "Constitution."
horizontal_alignment = 2

[node name="Grid2" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2

[node name="ConstitutionSpinBox" type="SpinBox" parent="Container/Grid/Grid2"]
layout_mode = 2
max_value = 99.0
page = 1.0

[node name="LabelDescription2" type="Label" parent="Container/Grid/Grid2"]
layout_mode = 2
mouse_filter = 1
text = "Constitution bonus."

[node name="DefenseLabel" type="Label" parent="Container/Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "Defense."
horizontal_alignment = 2

[node name="Grid3" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2

[node name="DefenseSpinBox" type="SpinBox" parent="Container/Grid/Grid3"]
layout_mode = 2
max_value = 99.0
page = 1.0

[node name="LabelDescription3" type="Label" parent="Container/Grid/Grid3"]
layout_mode = 2
mouse_filter = 1
text = "Defense bonus."

[node name="DexterityLabel" type="Label" parent="Container/Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "Dexterity."
horizontal_alignment = 2

[node name="Grid4" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2

[node name="DexteritySpinBox" type="SpinBox" parent="Container/Grid/Grid4"]
layout_mode = 2
max_value = 99.0
page = 1.0

[node name="LabelDescription4" type="Label" parent="Container/Grid/Grid4"]
layout_mode = 2
mouse_filter = 1
text = "Dexterity bonus."

[node name="IntelligenceLabel" type="Label" parent="Container/Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "Intelligence."
horizontal_alignment = 2

[node name="Grid5" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2

[node name="IntelligenceSpinBox" type="SpinBox" parent="Container/Grid/Grid5"]
layout_mode = 2
max_value = 99.0
page = 1.0

[node name="LabelDescription5" type="Label" parent="Container/Grid/Grid5"]
layout_mode = 2
mouse_filter = 1
text = "Intelligence bonus."

[node name="LuckLabel" type="Label" parent="Container/Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "Luck."
horizontal_alignment = 2

[node name="Grid6" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2

[node name="LuckSpinBox" type="SpinBox" parent="Container/Grid/Grid6"]
layout_mode = 2
max_value = 99.0
page = 1.0

[node name="LabelDescription6" type="Label" parent="Container/Grid/Grid6"]
layout_mode = 2
mouse_filter = 1
text = "Luck bonus."

[node name="PerceptionLabel" type="Label" parent="Container/Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "Perception."
horizontal_alignment = 2

[node name="Grid7" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2

[node name="PerceptionSpinBox" type="SpinBox" parent="Container/Grid/Grid7"]
layout_mode = 2
max_value = 99.0
page = 1.0

[node name="LabelDescription7" type="Label" parent="Container/Grid/Grid7"]
layout_mode = 2
mouse_filter = 1
text = "Perception bonus."

[node name="StrengthLabel" type="Label" parent="Container/Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "Strength."
horizontal_alignment = 2

[node name="Grid8" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2

[node name="StrengthSpinBox" type="SpinBox" parent="Container/Grid/Grid8"]
layout_mode = 2
max_value = 99.0
page = 1.0

[node name="LabelDescription8" type="Label" parent="Container/Grid/Grid8"]
layout_mode = 2
mouse_filter = 1
text = "Strength bonus."

[node name="WillpowerLabel" type="Label" parent="Container/Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "Willpower."
horizontal_alignment = 2

[node name="Grid9" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2

[node name="WillpowerSpinBox" type="SpinBox" parent="Container/Grid/Grid9"]
layout_mode = 2
max_value = 99.0
page = 1.0

[node name="LabelDescription9" type="Label" parent="Container/Grid/Grid9"]
layout_mode = 2
mouse_filter = 1
text = "Willpower bonus."

[node name="WisdomLabel" type="Label" parent="Container/Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "Wisdom."
horizontal_alignment = 2

[node name="Grid10" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2

[node name="WisdomSpinBox" type="SpinBox" parent="Container/Grid/Grid10"]
layout_mode = 2
max_value = 99.0
page = 1.0

[node name="LabelDescription10" type="Label" parent="Container/Grid/Grid10"]
layout_mode = 2
mouse_filter = 1
text = "Wisdom bonus."

[node name="EmptyTitle" type="Label" parent="Container/Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")

[node name="EmptyBody" type="Label" parent="Container/Grid"]
layout_mode = 2
mouse_filter = 1

[node name="StatusBar" parent="." instance=ExtResource("2")]

[node name="AcceptDialogRename" type="AcceptDialog" parent="."]
size = Vector2i(500, 100)
theme = ExtResource("4")
dialog_autowrap = true

[node name="AcceptDialogReturnToBuilderHome" type="AcceptDialog" parent="."]
size = Vector2i(500, 100)
theme = ExtResource("4")
dialog_autowrap = true

[connection signal="tree_exiting" from="." to="." method="_on_Node2D_tree_exiting"]
[connection signal="value_changed" from="Container/Grid/GridContainer/ArtifactNumberSpinBox" to="." method="_on_artifact_number_SpinBox_value_changed"]
[connection signal="value_changed" from="Container/Grid/Grid1/CharismaSpinBox" to="." method="_on_SpinBox_charisma_changed"]
[connection signal="value_changed" from="Container/Grid/Grid2/ConstitutionSpinBox" to="." method="_on_SpinBox_constitution_changed"]
[connection signal="value_changed" from="Container/Grid/Grid3/DefenseSpinBox" to="." method="_on_SpinBox_defense_changed"]
[connection signal="value_changed" from="Container/Grid/Grid4/DexteritySpinBox" to="." method="_on_SpinBox_dexterity_changed"]
[connection signal="value_changed" from="Container/Grid/Grid5/IntelligenceSpinBox" to="." method="_on_SpinBox_intelligence_changed"]
[connection signal="value_changed" from="Container/Grid/Grid6/LuckSpinBox" to="." method="_on_SpinBox_juck_changed"]
[connection signal="value_changed" from="Container/Grid/Grid7/PerceptionSpinBox" to="." method="_on_SpinBox_perception_changed"]
[connection signal="value_changed" from="Container/Grid/Grid8/StrengthSpinBox" to="." method="_on_SpinBox_strength_changed"]
[connection signal="value_changed" from="Container/Grid/Grid9/WillpowerSpinBox" to="." method="_on_SpinBox_willpower_changed"]
[connection signal="value_changed" from="Container/Grid/Grid10/WisdomSpinBox" to="." method="_on_SpinBox_wisdom_changed"]
[connection signal="focus_exited" from="AcceptDialogRename" to="." method="_on_AcceptDialog_focus_exited"]
[connection signal="confirmed" from="AcceptDialogReturnToBuilderHome" to="." method="_on_AcceptDialog_return_to_builder_home_confirmed"]
